--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -47,19 +47,31 @@
         margin: 0 16px;
         display: flex;
         justify-content: space-between;
+        @include mobile {
+            justify-content: flex-start;
+            flex-direction: column;
+        }
     }
     &__col-big {
         height: auto;
         background-color: rgba(255,255,255,.3);
         width: 70%;
-        // max-width: 860px;
         margin-right: 16px;
+        min-height: calc(100vh - 120px);
+        @include mobile {
+            width: 100%;
+            margin: 0 0 16px 0;
+        }
     }
     &__col-small {
         height: auto;
         background-color: rgba(255,255,255,.3);
         width: 25%;
-        // max-width: 356px;
         margin-left: 16px;
+        min-height: calc(100vh - 120px);
+        @include mobile {
+            margin: 16px 0 0 0;
+            width: 100%;
+        }
     }
 }
