--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -1,3 +1,14 @@
+.safe-area {
+    max-width: 1280px;
+    width: 100%;
+    margin: 0 16px;
+}
+
+.row {
+    display: flex;
+    flex-direction: row;
+}
+
 .header {
     width: 100vw;
     background-color: tan;
