--- a/src/scss/components/nav.scss
+++ b/src/scss/components/nav.scss
@@ -1,11 +1,21 @@
 $font-text: 'Roboto', sans-serif;
 
-.nav .nav__link {
-    padding: 8px 12px;
-    font-family: $font-text;
-    font-weight: 400;
-    color: #979797;
-    text-decoration: none;
-    &.active { color: #171818 }
-    &:hover { color: #171818 }
+.nav {
+    &__link {
+        font-size: 14px;
+        padding: 8px 12px;
+        font-family: $font-text;
+        font-weight: 400;
+        letter-spacing: 0.03em;
+        color: #979797;
+        text-decoration: none;
+        &.active { color: #171818 }
+        &:hover { color: #171818 }
+    }
+    @include tablet {
+        display: none;
+    }
+    @include mobile {
+        display: none;
+    }
 }
