create a lot of components

--- a/src/scss/blocks/_index.scss
+++ b/src/scss/blocks/_index.scss
@@ -1,2 +1,11 @@
 @import 'header';
 @import 'footer';
+@import 'top-authors';
+@import 'top-answer';
+@import 'top-question';
+@import 'banner';
+@import 'feed';
+@import 'articles-last';
+@import 'articles-block';
+@import 'articles-top';
+@import 'article';
