--- a/src/scss/blocks/header.scss
+++ b/src/scss/blocks/header.scss
@@ -1,7 +1,7 @@
 .header {
     width: 100vw;
     height: 60px;
-    background-color: white;
+    background-color: $c-bg1;
     display: flex;
     justify-content: center;
     &__container {
