--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -1,72 +1,121 @@
+.wrapper {
+  background-color: $c-bg2;
+  width: 100vw;
+  height: auto;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
 .safe-area {
-    max-width: 1280px;
-    width: 100%;
-    margin: 0 16px;
+  max-width: 1280px;
+  width: 100%;
+  padding: 0 16px;
+  height: 100%;
+  box-sizing: border-box;
 }
 
 .row {
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
+}
+
+.col {
+  display: flex;
+  flex-direction: column;
 }
 
 .main {
-    width: 100vw;
-    background-color: tomato;
-    min-height: calc(100vh - 120px);
+  width: 100vw;
+  height: 100%;
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  align-items: center;
+  padding: 24px 0;
+  box-sizing: border-box;
+  @include mobile {
+    min-height: calc(100vh - 160px);
+  }
+
+  &__content-with-col {
+    height: auto;
+    width: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    @include mobile {
+      justify-content: flex-start;
+      flex-direction: column;
+    }
+  }
+  &__col-left {
+    width: 70%;
+    margin-right: 16px;
+    @include mobile {
+      width: 100%;
+      margin: 0 0 16px 0;
+    }
+  }
+  &__col-right {
+    width: 25%;
+    margin-left: 16px;
+    @include mobile {
+      margin: 16px 0 0 0;
+      width: 100%;
+    }
+  }
 }
 
-.header, .main, .footer {
-    &__content {
-        height: auto;
-        max-width: 1280px;
-        width: 100%;
-        background-color: rgba(255,255,255,.3);
-        margin: 0 16px;
-        display: flex;
-        justify-content: center;
+.header,
+.main,
+.footer {
+  &__content {
+    height: auto;
+    max-width: 1280px;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.3);
+    margin: 0 16px;
+    display: flex;
+    justify-content: center;
+  }
+  &__article {
+    height: auto;
+    max-width: 700px;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.3);
+    margin: 0 16px;
+  }
+  &__content-with-col {
+    height: auto;
+    max-width: 1280px;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.3);
+    margin: 0 16px;
+    display: flex;
+    justify-content: space-between;
+    @include mobile {
+      justify-content: flex-start;
+      flex-direction: column;
     }
-    &__article {
-        height: auto;
-        max-width: 700px;
-        width: 100%;
-        background-color: rgba(255,255,255,.3);;
-        margin: 0 16px;
+  }
+  &__col-big {
+    width: 70%;
+    margin-right: 16px;
+    min-height: calc(100vh - 120px);
+    @include mobile {
+      width: 100%;
+      margin: 0 0 16px 0;
     }
-    &__content-with-col {
-        height: auto;
-        max-width: 1280px;
-        width: 100%;
-        background-color: rgba(255,255,255,.3);
-        margin: 0 16px;
-        display: flex;
-        justify-content: space-between;
-        @include mobile {
-            justify-content: flex-start;
-            flex-direction: column;
-        }
+  }
+  &__col-small {
+    // height: auto;
+    background-color: rgba(255, 255, 255, 0.3);
+    width: 25%;
+    margin-left: 16px;
+    min-height: calc(100vh - 120px);
+    @include mobile {
+      margin: 16px 0 0 0;
+      width: 100%;
     }
-    &__col-big {
-        height: auto;
-        background-color: rgba(255,255,255,.3);
-        width: 70%;
-        margin-right: 16px;
-        min-height: calc(100vh - 120px);
-        @include mobile {
-            width: 100%;
-            margin: 0 0 16px 0;
-        }
-    }
-    &__col-small {
-        height: auto;
-        background-color: rgba(255,255,255,.3);
-        width: 25%;
-        margin-left: 16px;
-        min-height: calc(100vh - 120px);
-        @include mobile {
-            margin: 16px 0 0 0;
-            width: 100%;
-        }
-    }
+  }
 }
